server part done

--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,10 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <meta
+    name="google-signin-client_id" 
+    content="1080086768631-j3u5520ff0orqd8e467t6kj13rcncslf.apps.googleusercontent.com"
+  />
 </head>
 <body>
   <script>
